<resources>
    <string name="app_name">EasyDelivery</string>
    <string name="se_connecter">Se connecter</string>
    <string name="email">Email\n</string>
    <string name="password">Password\n</string>
    <string name="login">Login\n</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="cliquez_pour_vous_connectez">Cliquez pour vous connectez</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="numero_de_t_l_phone">Numero de téléphone</string>
    <string name="numero_d_immatriculation_du_v_hicule">Numero d\'immatriculation du véhicule</string>
    <string name="mon_profil">Mon profil</string>
    <string name="enregistrer_les_modifications">Enregistrer les modifications</string>
    <string name="nouveau_mot_de_passe">Nouveau mot de passe</string>
    <string name="kg">€/kg</string>
    <string name="adresse">Adresse de livraison</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>