<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:orientation="vertical"
android:gravity="center"
android:layout_height="match_parent"
android:padding="15dp"
tools:context=".UserProfile">

<TextView
    android:layout_width="match_parent"
    android:textSize="20sp"
    android:textStyle="bold"
    android:gravity="center"
    android:layout_marginBottom="20dp"
    android:layout_height="wrap_content"
    android:text="@string/mon_profil" />
<ImageView
    android:id="@+id/userLogo"
    android:layout_width="100dp"
    android:layout_height="80dp"
    android:src="@drawable/usericon"
    />

<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:hint="@string/nouveau_mot_de_passe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tel"
        android:hint="@string/numero_de_t_l_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/immatriculation"
        android:hint="@string/numero_d_immatriculation_du_v_hicule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
</com.google.android.material.textfield.TextInputLayout>


<Button
    android:id="@+id/ModifyButton"
    android:text="@string/enregistrer_les_modifications"
    android:layout_width="480dp"
    android:layout_height="wrap_content"
    android:backgroundTint="#F4978E"></Button>



</LinearLayout>