<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:orientation="vertical"
android:gravity="center"
android:layout_height="match_parent"
android:padding="15dp"
tools:context=".SignInActivity">

<TextView
    android:layout_width="match_parent"
    android:textSize="20sp"
    android:textStyle="bold"
    android:gravity="center"
    android:layout_marginBottom="20dp"
    android:layout_height="wrap_content"
    android:text="@string/s_inscrire" />

<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tel"
        android:hint="@string/numero_de_t_l_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</com.google.android.material.textfield.TextInputLayout>

<RadioGroup
    android:id="@+id/roleRadioGroup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <RadioButton
        android:id="@+id/radioBuyer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Acheteur" />

    <RadioButton
        android:id="@+id/radioPlanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Planificateur" />

    <RadioButton
        android:id="@+id/radioDriver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Chauffeur" />
</RadioGroup>

<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/immatriculation"
        android:hint="@string/numero_d_immatriculation_du_v_hicule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
</com.google.android.material.textfield.TextInputLayout>

<ProgressBar
    android:id="@+id/progressBar"
    android:visibility="gone"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"    />

<Button
    android:id="@+id/SignInButton"
    android:text="@string/s_inscrire"
    android:layout_width="480dp"
    android:layout_height="wrap_content"
    android:backgroundTint="#F4978E"></Button>

<TextView
    android:textSize="20sp"
    android:textStyle="bold"
    android:gravity="center"
    android:id="@+id/loginNow"
    android:text="@string/cliquez_pour_vous_connectez"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"    />

</LinearLayout>